# size_hinter

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  build.yml  coverage.yml  docs.yml  publish.yml
src/: exact_len.rs  hint_size.rs  invalid_iterator.rs  lib.rs  size_hint.rs  size_hinter.rs  test_iter.rs
tests/: exact_len.rs  exact_len_iter.rs  hint_size.rs  invalid_iterator.rs  size_hint.rs  test_iterator.rs
tests/common/: mod.rs
tests/macros/: mod.rs
